# UCU

./: README.md
ACS/exam-xsponenta/: final.txt  main.cpp  output.txt  readme.md
ACS/lab10-words-count-high-level-tools-ivanyshyn_ahitoliev_ozarko_team/: CMakeLists.txt  cfg_reader.hpp  first.cfg  main.cpp  readme.md  report.txt  runner.py
ACS/lab2-productivity-comparison-ahitoliev-ivanyshyn/: CMakeLists.txt  cxx_perf_conv.cpp  cxx_perf_io.cpp  readme.md
ACS/lab3-integral-team_ahitoliev_ivanyshyn/: CMakeLists.txt  func1.cfg  func2.cfg  func3.cfg  main.cpp  readme.md
ACS/lab4-parallel-integral-team_ahitoliev_ivanyshyn/: CMakeLists.txt  func1.cfg  main.cpp  readme.md
ACS/lab5-integral-queue-team_ahitoliev_ivanyshyn/: CMakeLists.txt  func3.cfg  main.cpp  readme.md
ACS/lab6-integral-threadpool-team_ahitoliev_ivanyshyn/: CMakeLists.txt  func2.cfg  main.cpp  readme.md
ACS/lab7-words-count-unicode-ivanyshyn_ahitoliev_ozarko_team/: CMakeLists.txt  cfg_reader.hpp  first.cfg  main.cpp  perf_report.txt  readme.md  runner.py  time_measurements.hpp
ACS/lab8-words-count-parallel-ivanyshyn_ahitoliev_ozarko_team/: CMakeLists.txt  cfg_reader.hpp  first.cfg  main.cpp  paralel.py  perf_report.txt  readme.md  runner.py
ACS/lab9-words-count-queue-ivanyshyn_ahitoliev_ozarko_team/: CMakeLists.txt  first.cfg  main.cpp  readme.md  report.txt  runner.py  thread_queue.hpp
LA/: LA_Lab_2_Sofia_Igor_Bogdan(1).ipynb  LA_Lab_3_2024_Ivanyshyn_Ahitoliev_Martsinkovska.ipynb
POC/lab1/: mystring.cpp  (+3 more)
POC/lab1-cstring/: main.cpp
POC/lab2-cmake/2_zlib_sample/examples/: CMakeLists.txt  minigzip.c
POC/lab2-make-cmake-ahitoliev_ivanyshyn_pavliuk/mystring/examples/: CMakeLists.txt  makeex
POC/lab3-strings-usage-ahitoliev_ivanyshyn_pavliuk/: CMakeLists.txt  README.md  test.txt
POC/lab3-strings-usage-ahitoliev_ivanyshyn_pavliuk/Ahitoliev_Pavluk_Ivanyshun_string/: run_tests_ci.sh
POC/lab3-strings-usage-ahitoliev_ivanyshyn_pavliuk/Ahitoliev_Pavluk_Ivanyshun_string/cmake/: PVS-Studio-conf.cmake  Sanitizers.cmake
POC/lab3-strings-usage-ahitoliev_ivanyshyn_pavliuk/Ahitoliev_Pavluk_Ivanyshun_string/cmake/extra/sanitizers/: FindTSan.cmake  FindUBSan.cmake
(+146 files in other folders)
